2003-12-04  Alan Modra  <amodra@bigpond.net.au>

	* elf32-i386.c (elf_i386_object_p): Delete.
	(elf_backend_object_p): Don't define.
	* elf32-s390.c (elf_s390_object_p): No need to alloc tdata here.
	* elf32-sh.c (sh_elf_object_p): Likewise.
	* elf32-sparc.c (elf32_sparc_object_p): Likewise.
	* elf64-alpha.c (elf64_alpha_object_p): Likewise.
	* elf64-s390.c (elf_s390_object_p): Likewise.
	* elf64-x86-64.c (elf64_x86_64_elf_object_p): Likewise.

2003-12-03  Kazuhiro Inaoka  <inaoka.kazuhiro@renesas.com>

	* archures.c (bfd_mach_m32r2): Add new machine type.
	* bfd-in2.h: Regenerate.
	* cpu-m32r.c : Add new machine type.
	* elf32-m32r.c (m32r_elf_object_p, m32r_elf_final_write_processing,
        m32r_elf_merge_private_bfd_data): Add support for new machine
	type.

2003-12-03  Dave Airlie  <airlied@linux.ie>

	* config.bfd: Add vax-linux-gnu target.
	* configure.in: Likewise.
	* configure: Regenerate.

2003-12-03  Alan Modra  <amodra@bigpond.net.au>

	* ecoff.c (ecoff_link_add_archive_symbols): Update for renamed
	bfd_link_hash_entry field "next" -> "und_next".
	* linker.c (_bfd_link_hash_newfunc): Likewise.
	(bfd_link_add_undef): Likewise.
	(_bfd_generic_link_add_archive_symbols): Likewise.
	(_bfd_generic_link_add_one_symbol): Likewise.
	* xcofflink.c (xcoff_link_add_symbols): Likewise.

2003-12-02  Nick Clifton  <nickc@redhat.com>

	* configure.in (ALL_LINGUAS): Add ro.
	* po/ro.po: New Romanian translation.

2003-12-02  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am: Run "make dep-am".
	* Makefile.in: Regenerate.

2003-12-01  Dmitry Semyonov  <Dmitry.Semyonov@oktet.ru>

	* coffcode.h (coff_compute_section_file_positions): Set page_size
	to 1 instead of 0 in the case file alignment value is zero.

2003-12-01  Kazu Hirata  <kazu@cs.umass.edu>

	* coff-rs6000.c: Remove ARGSUSED and VARARGS.
	* coff64-rs6000.c: Likewise.
	* coffcode.h: Likewise.
	* elf32-vax.c: Likewise.
	* hash.c: Likewise.
	* hppabsd-core.c: Likewise.
	* hpux-core.c: Likewise.